@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -53,6 +53,7 @@ import jdk.jfr.SettingControl;
 import jdk.jfr.SettingDefinition;
 import jdk.jfr.internal.event.EventConfiguration;
 import jdk.jfr.internal.event.EventWriter;
+import jdk.jfr.internal.util.Utils;
 
 /**
  * Class responsible for adding instrumentation to a subclass of {@link Event}.
@@ -226,7 +227,7 @@ public final class EventInstrumentation {
                         for (AnnotationNode nameCandidate : m.visibleAnnotations) {
                             if (ANNOTATION_NAME_DESCRIPTOR.equals(nameCandidate.desc)) {
                                 List<Object> values = nameCandidate.values;
-                                if (values.size() == 1 && values.get(0)instanceof String s) {
+                                if (values.size() == 1 && values.getFirst() instanceof String s) {
                                     name = Utils.validJavaIdentifier(s, name);
                                 }
                             }
